--- a/my-cd-database.org
+++ b/my-cd-database.org
@@ -346,3 +346,64 @@ whereマクロを実際に使ってみよう！
 
 #+RESULTS:
 | :TITLE | Beyond The Binary | :ARTIST | 星宮とと, SOZEN OTSUBO | :RATING | 7 | :RIPPED | T |
+
+* 第4章 シンタックスとセマンティクス
+** S式
+以下のどちらかのこと。
+- リスト
+  - カッコで括られている
+  - 空白で区切って、いくつでもS式を含められる
+- アトム
+  - リスト以外の、コメントをのぞいた全て。
+** アトムの種類
+- 数値
+  - 整数、分数、浮動小数点数、複素数がある
+- 文字列
+  - ダブルクォートでくくる
+  - バックスラッシュは次の文字をエスケープし、それが何であろうと文字列中に含まれるようにする。
+    - ダブルクォートとバックスラッシュの2つだけは、文字列の中で必ずエスケープしなければならない。
+- シンボル
+  - ~FORMAT~ や ~hello-world~ や ~*db*~ といった、「名前」。
+  - カッコやクォート類、カンマやコロン、バックスラッシュはエスケープすれば、シンボルの一部として使える
+  - リストの読み取り機は、エスケープされていないシンボルを、全て大文字に変換する。
+  - シンボルの命名規約
+    - ハイフンがよく使われる
+    - ダイナミック変数の先頭と末尾に ~*~ をつける
+    - 定数の先頭と末尾に ~+~ をつける
+    - 下位層の関数の先頭に ~%~ をつけるLisperもいるらしい
+** LispフォームとしてのS式
+アトムは2種類に分類できる
+- シンボル
+  - 変数の名前とみなされ、その変数の現在の値として評価される。
+- それ以外
+  - 自己評価型 (*self-evaluating*)のオブジェクト。
+  - 数値や文字列など、評価器に渡すとそれ自身が帰ってくるもののこと。
+
+シンボルも、変数の名前に代入すれば自己評価型になる。
+~T~ や ~NIL~ はこの形式で定義されている。
+キーワード引数で使われる **キーワードシンボル** ~:symbol~ も、同じく自己評価型になるシンボルで、
+その名前の定数が自動的に定義される。
+
+正規のリストフォームは、すべてシンボルで始まり、
+評価のされかたによって3種類に分けられる。
+- 関数呼び出しフォーム
+- マクロフォーム
+- 特殊フォーム
+** 特殊オペレータ
+すべての操作を関数として定義できるわけではない。例えば関数では、 ~IF~ を定義できない。
+なぜなら関数は左から、そして内側から評価されてしまうから。
+以下の ~IF~ がもし関数なら、 ~x~ が何であれ、常に yes no が表示され、それから ~IF~ の評価が始まってしまい、
+期待する動作にならない。
+#+begin_src lisp
+  (if x (format t "yes") (format t "no"))
+#+end_src
+この問題を解決するため、Common Lispには関数ができないことをするための **特殊オペレータ** が25個ある。
+リストの先頭が特殊オペレータの名前だった場合、式の残りはその特殊オペレータのルールに従って評価される。
+** マクロ
+ユーザに対して、Lispのシンタックスを拡張する手段を提供するのがマクロ。
+マクロは「S式を引数に取って、そのマクロフォームの代わりに評価されるLispフォームを返す関数」と考えることができる。
+- マクロはコンパイル時に展開される。
+- 評価器は、マクロがマクロ関数に渡る前にマクロフォームの要素を評価することはない。
+  よって、マクロフォームはきちんとしたLispフォームでなくても良い。
+- ループ構文はいつだってマクロだ。
+** 真、偽、そして等しさ
