5章の途中まで

--- a/my-cd-database.org
+++ b/my-cd-database.org
@@ -407,3 +407,75 @@ whereマクロを実際に使ってみよう！
   よって、マクロフォームはきちんとしたLispフォームでなくても良い。
 - ループ構文はいつだってマクロだ。
 ** 真、偽、そして等しさ
+*** 真偽値
+Common Lispにおいては、 ~NIL~ だけが唯一の偽の値で、他のあらゆるものが真。
+標準の真の値はシンボル ~T~ で、具体的な値を持たない 非NIL として使われる。
+
+~NIL~ はアトムでもありリストでもあり(Common Lispでこの特徴を持つのはNILだけ)、空リストを表すのにも使われる。
+また、読取器は空リストを見ると ~NIL~ として読む。
+~nil~ = ~()~ = ~'nil~ = '()
+*** 同一性の判定
+Common Lispには、等価性を判定する述語が型ごとに用意されている。
+例えば数値の比較には ~=~ を使い、文字の比較には ~CHAR=~ を使う。
+
+Lispオブジェクト全般に使える、等価性判定の総称的な述語が4つある
+- EQ
+  - 「オブジェクト同一性」(object identity)を比較する。
+  - ただし数や文字のオブジェクト同一性は、処理系でそれらの型がどのように実装されているかに依存する
+  - 数値や文字になり得る値の比較には、 ~EQ~ を使うべきではない。
+- EQL
+  - ~EQL~ は ~EQ~ と同じようにオブジェクト同一性を判定する述語だが、同じ数値や文字の値を表している同じクラスの
+    同じオブジェクトは、常に等しいと判定されると保証されている
+  - 色々なスタイルがあるが、この本では *比較には常に ~EQL~ を使う* 。
+- EQUAL
+  - ~EQL~ より等価性の判定基準が甘く、異なるオブジェクトでも等しいとみなされる
+  - 文字列や配列、パス名について、ぱっと見で等しそうなら真になる。
+  - その他のデータ型については ~EQL~ を使って判定される。
+- EQUALP
+  - ~EQUAL~ よりさらに判定基準が甘い。
+  - 文字列は、大文字小文字の違いがあっても等しいとみなされる
+  - 数値は、数学的に同じなら等しいとみなされる。 ~(equalp 1 1.0)~ は真。
+  - ~EQUALP~ からなるリスト同士は ~EQUALP~ であり、 ~EQUAL~ からなる配列も ~EQUALP~ である
+  - その他のデータ型については ~EQL~ を使って判定される。
+** Lispコードの書式
+インデントは、コードの構造を反映したものにする。
+括弧を書き間違えると、自動フォーマットしたときにインデントがおかしくなるので、気づけるはず(とのこと)。
+- 意味的に同じだが改行が必要な場合は、同じレベルのインデントにする
+- 関数・マクロ・特殊フォームは、本体をスペース2つ分インデントする
+- *閉じ括弧は、閉じようとするリストの最後の要素と同じ行に書くこと。*
+- コメント 1~4つのセミコロンを使う
+  - セミコロン4つはファイルヘッダ
+  - セミコロン3つは意味段落で使う
+  - セミコロン1つは、文末の1行コメント
+* 第5章 関数
+** 新しい関数の定義
+関数は ~defun~ マクロを使って定義される。
+#+begin_src lisp :eval no
+      (defun name (parameter*)
+        "省略可能なドキュメンテーション文字列"
+        body-form*)
+#+end_src
+
+*name* には、どんなシンボルでも使える。
+- 変換系の関数には、よく ~string->widget~ のような名前がつけられる
+- スネークケースやキャメルケース・パスカルケースではなく、ハイフンを使ったケバブケースで命名する。
+  
+*parameter* のリストは、関数を呼ぶときに渡す引数を保持するのに使う変数を定義する。以下のように色々種類がある
+- 必須パラメータ
+- オプショナルパラメータ
+- マルチプルパラメータ
+- キーワードパラメータ
+
+パラメータリストの後に続く文字列リテラルは、関数の目的を説明する *ドキュメント* になる。
+この文字列は関数の名前と自動的に対応づけられ、後で ~DOCUMENTATION~ 関数で取り出すことができる。
+
+*body-form* は任意の個数のLisp式で構成される。
+これらは関数が呼び出されるときに順番に評価され、最後の式の値が関数の値として返される。
+最後の値を戻り値にしたくないときには、 ~RETURN-FROM~ という特殊オペレータを使ってreturnすることもできる。
+** 関数のパラメータリスト
+*** 必須パラメータ
+パラメータリストが単純に、変数の名前からなるリストの時、そのパラメータを *必須パラメータ* と呼ぶ。
+関数が呼び出される時、必須パラメータには、対応する実引数が必要になる。
+必須パラメータと実引数の数が合わないと、Lispはエラーを通知する。
+*** オプショナルパラメータ
+
